# demo_service

./: .gitignore  README.md  dockerfile  main.py  pyproject.toml
.github/workflows/: ci.yml
