[tool.poetry]
name = "demo-service"
version = "0.1.0"
description = ""
authors = ["Richard Hutton <rich.hutton@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"

[tool.poetry.scripts]
runserver = "main:app"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
